# data_engineering

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
analytics_engineering/: homework.md  pyproject.toml
analytics_engineering/models/marts/: schema.yml
analytics_engineering/models/staging/: sources.yml  stg_fhv_tripdata.sql
batch/: .gitignore  Homework.md  homework.ipynb  pyproject.toml
big_query/: homework_bq.md  load_yellow_taxi_data.py
data_platform/bruin/taxi-pipeline/: homework.md
data_platform/bruin/taxi-pipeline/pipeline/: pipeline.yml
data_platform/bruin/taxi-pipeline/pipeline/assets/ingestion/: trips.py
data_platform/bruin/taxi-pipeline/pipeline/assets/reports/: trips_report.sql
orchestration/: homework.md
orchestration/flows/: 02_python.yml  03_getting_started_data_pipeline.yml  04_postgres_taxi.yaml  05_postgres_taxi_scheduled.yml  06_gcp_kv.yml  07_gcp_setup.yml  08_gcp_taxi.yml  09_gcp_taxi_scheduled.yml  hello_world.yml
streaming/: .gitignore  Dockerfile.flink  homework_solution.md  pyproject.toml
streaming/notebooks/: consumer.ipynb  consumer_db.ipynb  producer.ipynb
streaming/src/: green_trip_consumer.py  green_trip_producer.ipynb  green_trip_producer.py  models_green.py
streaming/src/job/: question4_tumbling_window.py  question5_session_window.py  question6_tumbling_window.py
streaming/src/job/producers/: producer_realtime.py
terraform/: .terraform.lock.hcl  main.tf  variables.tf
workshop/: explore_books.py  pyproject.toml
workshop/homework/: homework.md  taxi_pipeline.py
(+1 files in other folders)
